@@ -61,18 +61,8 @@ class CAutomation(Automation):
 
           (out) (str): if 'con', output to console
 
-          automation (str): automation as CM string object
-
-          parsed_automation (list): prepared in CM CLI or CM access function
-                                    [ (automation alias, automation UID) ] or
-                                    [ (automation alias, automation UID), (automation repo alias, automation repo UID) ]
-
-          (artifact) (str): artifact as CM string object
-
-          (parsed_artifact) (list): prepared in CM CLI or CM access function
-                                    [ (artifact alias, artifact UID) ] or
-                                    [ (artifact alias, artifact UID), (artifact repo alias, artifact repo UID) ]
-
+          (env) (bool): if True, show env from cm-cached-state.json
+          
           ...
 
         Returns:
@@ -84,11 +74,15 @@ class CAutomation(Automation):
           * Output from this automation action
 
         """
+        import json
+        
         # Check parsed automation
         if 'parsed_automation' not in i:
            return {'return':1, 'error':'automation is not specified'}
 
         console = i.get('out') == 'con'
+
+        show_env = i.get('env', False)
 
         # Find CM artifact(s)
         i['out'] = None
@@ -115,5 +109,25 @@ class CAutomation(Automation):
                 if version!='':
                     print ('    Version: {}'.format(version))
                 print ('    Path: {}'.format(path))
+
+            if show_env and console:
+                path_to_cached_state_file = os.path.join(path, 'cm-cached-state.json')
+
+                if os.path.isfile(path_to_cached_state_file):
+                    r =  utils.load_json(file_name = path_to_cached_state_file)
+                    if r['return']>0: return r
+
+                    # Update env and state from cache!
+                    cached_state = r['meta']
+
+                    new_env = cached_state.get('new_env', {})
+                    if len(new_env)>0:
+                        print ('    New env:')
+                        print (json.dumps(new_env, indent=6, sort_keys=True).replace('{','').replace('}',''))
+
+                    new_state = cached_state.get('new_state', {})
+                    if len(new_state)>0:
+                        print ('    New state:')
+                        print (json.dumps(new_env, indent=6, sort_keys=True))
 
         return {'return':0, 'list': lst}
